Load more parameterizable feature in list template.

--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -12,6 +12,12 @@ reading_time:
   one: ~Un minuto
   other: "~{{ .Count }} minutos"
 
+load_more:
+  other: "Cargar más..."
+
+loading:
+  other: Cargando...
+
 read_more:
   other: Leer más...
 
