--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -40,3 +40,7 @@ sending: Sending...
 thanks: Thank you!
 
 thanks_message: Thank you for contact us.
+
+error: Oops!
+
+error_message: The message couldn't be sent.
